prometheus/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: prometheus
spec:
  rules:
  - host: prometheus.159.8.233.5.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
